--- a/TPN1 Optativo/css/style.css
+++ b/TPN1 Optativo/css/style.css
@@ -1,6 +1,14 @@
-body {
+#cuerpo {
     width: 500px;
     height: 500px;
     border: 5px solid black;
-    background-color: antiquewhite;
+    background: linear-gradient(to bottom, lightblue, white);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#titulo {
+    padding-top: auto;
 }
