--- a/sicolo_unidad1/css/style.css
+++ b/sicolo_unidad1/css/style.css
@@ -8,3 +8,12 @@
     justify-content: center;
     align-items: center;
 }
+
+.formulario{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* width: 100px; */
+}
+
