--- a/calculadora/css/styles.css
+++ b/calculadora/css/styles.css
@@ -7,7 +7,7 @@
 }
 
 .container {
-    height: 500px;
+    height: 600px;
     width: 500px;
     border: 3px solid black;
     background-color: rgba(224, 224, 224, 0.788);
@@ -24,7 +24,29 @@
     justify-content: center;
     align-items: center;
     font-size: x-large;
+}
 
+.displaysR{
+    height: 80px;
+    margin: 20px;
+    border: 3px solid black;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    font-size: x-large;
+    text-decoration-color: black;
+}
+
+.display1 {
+    height: 50px;
+    border: 3px solid black;
+    width: 25%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    font-size: x-large;
 }
 
 .columnas {
