--- a/TAREAS/MODULO 2/TP OBLIGATORIO/sicolo_modulo2/src/App.css
+++ b/TAREAS/MODULO 2/TP OBLIGATORIO/sicolo_modulo2/src/App.css
@@ -36,3 +36,7 @@
     transform: rotate(360deg);
   }
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap');
